test/user_network_delay_istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-delay-v2
  namespace: sock-shop
spec:
  hosts:
  - user.sock-shop.svc.cluster.local
  http:
  - fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 50ms
    route:
    - destination:
        host: user.sock-shop.svc.cluster.local
